@@ -1,5 +1,7 @@
 # This file documents the revision history for Perl extension Catalyst.
 
+        - Make debug output show class name for the engine and dispatcher
+          rather than the stringified ref. (t0m)
         - Make MyApp immutable at the end of the scope after the setup
           method is called, fixing issues with plugins which have their 
           own new methods by inlining a constructor on MyApp (t0m)
